--- a/config.all.ini
+++ b/config.all.ini
@@ -23,13 +23,14 @@
 # method = origin
 # update_frequency = 43200
 
+[streaming]
+# bytes_per_read = 1152000
+
 [ffmpeg]
 # ffmpeg_path = ffmpeg
-# bytes_per_read = 1152000
 
 [vlc]
 # path = cvlc
-# bytes_per_read = 1152000
 
 [direct_stream]
 # chunksize = 1048576
